fix: Mentions should not collapse when prefix is empty

--- a/components/mentions/style/index.less
+++ b/components/mentions/style/index.less
@@ -76,6 +76,11 @@
     z-index: -1;
     color: transparent;
     pointer-events: none;
+
+    > span {
+      display: inline-block;
+      min-height: 1em;
+    }
   }
 
   // ================== Dropdown ==================
